changed cmd