@@ -7,4 +7,4 @@ FROM openjdk:11.0
 WORKDIR /app
 COPY --from=build /app/target/SDLC-check.jar .
 EXPOSE 8090
-CMD ["java","-jar","SDLC-check.jar"]
+CMD ["java","-jar","-XX:+UnlockExperimentalVMOptions","-XX:+UseCGroupMemoryLimitForHeap","SDLC-check.jar"]
